# ffmpeg4android

./: build4android.sh
MFPlayer/app/: CMakeLists.txt  build.gradle
MFPlayer/app/src/androidTest/java/cn/microframe/mfplayer/: ExampleInstrumentedTest.java
MFPlayer/app/src/main/: AndroidManifest.xml
MFPlayer/app/src/main/cpp/: native-lib.cpp
MFPlayer/app/src/main/java/cn/microframe/mfplayer/: MainActivity.java
MFPlayer/app/src/main/res/layout/: activity_main.xml
MFPlayer/app/src/main/res/values/: strings.xml
MFPlayer/app/src/test/java/cn/microframe/mfplayer/: ExampleUnitTest.java
MFPlayer/gradle/wrapper/: gradle-wrapper.properties
simplefflib/include/libavutil/: ffversion.h
simplefflib/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
